[package]
name = "sample_organizer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
natord = "1.0.9"
strsim = "0.11.1"
tempfile = "3.20.0"
os_pipe = "1.2.2"